# yaud

./: .gitignore  CONCEPT.md  Cargo.toml  Dioxus.toml  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
locales/: en.json
src/: database.rs  error.rs  hook.rs  main.rs  state.rs  tests.rs  up.surrealql
src/auth/: middleware.rs  mod.rs  session.rs
src/auth/authz/: mod.rs  permission.rs
src/database/: id.rs  mod.rs  page.rs  relation.rs  up.surrealql
src/database/definitions/: account.rs  mod.rs  permission.rs
src/database/definitions/task/: mod.rs  request.rs  state.rs
src/hook/: mail.rs  mod.rs
src/routes/: extractor.rs  mod.rs  openapi.rs
src/routes/auth/: mod.rs  password.rs  totp.rs
src/routes/task/: mod.rs  request.rs
src/server/: database.rs  error.rs  mod.rs  state.rs  up.surrealql
src/server/hook/: mail.rs  mod.rs
src/web/: input.css  mod.rs  route.rs  util.rs
src/web/assets/styles/: colors.css  colors.css.map  colors.sass  main.css  main.css.map  main.sass
src/web/assets/styles/form/: button.sass
src/web/components/: mod.rs
src/web/components/form/: button.rs  mod.rs
src/web/components/layout/: footer.rs  mod.rs
src/web/components/layout/navigation/: bar.rs  drawer.rs  mod.rs
src/web/pages/: login.rs  mod.rs
src/web/public/: fonts.css  tailwind.css  tailwind.css.map  tailwind.min.css
src/web/templates/: home.html
yaud-codegen/: Cargo.toml
yaud-codegen/src/: lib.rs
yaud-dioxus/: Cargo.toml
yaud-dioxus/src/: lib.rs
