[package]
name = "yaud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
getset = "0.1.2"
kanal = "0.1.0-pre8"
serde = { version = "1.0.176", features = ["derive"] }
serde_json = "1.0.104"
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", rev = "28368d83c945b01c1a8cbc6aea1f88595177ef8d" }
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
version-compare = "0.1.1"

[dev-dependencies]
nanoid = "0.4.0"
