[package]
name = "yaud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaud-dioxus = { path = "./yaud-dioxus" }

cfg-if = "1.0.0"
envy = "0.4.2"
getset = "0.1.2"
kanal = "0.1.0-pre8"
lazy_static = "1.4.0"
lettre = { version = "0.10.4", features = ["tokio1-native-tls"] }
serde = { version = "1.0.176", features = ["derive"] }
serde_json = "1.0.104"
strum = { version = "0.25.0", features = ["derive"] }
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", rev = "28368d83c945b01c1a8cbc6aea1f88595177ef8d" }
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
rust-i18n = "2.1.0"
version-compare = "0.1.1"

[features]
default = []
ssr = ["yaud-dioxus/ssr"]
web = ["yaud-dioxus/web"]

[dev-dependencies]
chrono = "0.4.26"
nanoid = "0.4.0"
reqwest = { version = "0.11.18", features = ["json"] }
